Final commit on 10.35

--- a/src/P10_35/RestaurantBill.form
+++ b/src/P10_35/RestaurantBill.form
@@ -109,7 +109,7 @@
           <grid row="0" column="3" row-span="1" col-span="2" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
-          <text value="Add item:"/>
+          <text value="Add Price"/>
         </properties>
       </component>
       <component id="4cf3e" class="javax.swing.JLabel">
@@ -117,12 +117,12 @@
           <grid row="0" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
-          <text value="Add Price:"/>
+          <text value="Add Item"/>
         </properties>
       </component>
       <component id="95769" class="javax.swing.JTextArea" binding="textArea1" default-binding="true">
         <constraints>
-          <grid row="5" column="2" row-span="4" col-span="2" vsize-policy="6" hsize-policy="6" anchor="0" fill="3" indent="0" use-parent-layout="false">
+          <grid row="5" column="2" row-span="4" col-span="4" vsize-policy="6" hsize-policy="6" anchor="0" fill="3" indent="0" use-parent-layout="false">
             <preferred-size width="150" height="50"/>
           </grid>
         </constraints>
@@ -134,6 +134,14 @@
         </constraints>
         <properties>
           <text value="Calculate Bill"/>
+        </properties>
+      </component>
+      <component id="b5c02" class="javax.swing.JButton" binding="addItemButton" default-binding="true">
+        <constraints>
+          <grid row="1" column="5" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties>
+          <text value="Add Item"/>
         </properties>
       </component>
     </children>
